--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   <body>
     <h1>Kernel Development</h1>
+    <h3>Mr. Bil Bahadur Thami does not have his website. Yet, he blames others for his failure.</h3>
     <a href="./kernel/">Click Here</a>
   </body>
 </html>
