--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <body>
     <h1>Kernel Development</h1>
-    <h3 href="https://github.com/PrabeshMarasini/Kernel">Github</h3>h3>
+    <h3 href="https://github.com/PrabeshMarasini/Kernel">Github</h3>
     <a href="./kernel/">Bootloader</a>
   </body>
 </html>
