added Artificial Knowledge Utility

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Kernel Development</h1>
     <a href="https://github.com/PrabeshMarasini/Kernel">Github</a>
-    <a href="./kernel/">Bootloader</a>
+    <a href="https://github.com/PrabeshMarasini/Artificial-Knowledge-Utility">Github</a>
   </body>
 </html>
