--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
   <body>
     <h1>Kernel Development</h1>
-    <a href="https://github.com/PrabeshMarasini/Kernel">Github</a>
-    <a href="https://github.com/PrabeshMarasini/Artificial-Knowledge-Utility">Github</a>
+    <a href="./Artificial-Knowledge-Utility">ArtificialKnowledgeUtility</a>
   </body>
 </html>
