--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
   <body>
     <h1>Kernel Development</h1>
-    <a href="./Artificial-Knowledge-Utility">ArtificialKnowledgeUtility</a>
+    <a href="./Artificial Knowledge Utility">ArtificialKnowledgeUtility</a>
   </body>
 </html>
