--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
   <body>
     <h1>Kernel Development</h1>
-    <a href="./aku.html">ArtificialKnowledgeUtility</a>
+    <a href="./ArtificialKnowledgeUtility.html">Artificial Knowledge Utility</a>
   </body>
 </html>
