--- a/ArtificialKnowledgeUtility.html
+++ b/ArtificialKnowledgeUtility.html
@@ -4,5 +4,5 @@
     </head>
 
     <h1>AKU</h1>
-    <a href="./aku.html">ArtificialKnowledgeUtility</a>
+    <a href="./ArtificialKnowledgeUtility1.html">Artificial Knowledge Utility 1</a>
 </html>
