--- a/ArtificialKnowledgeUtility1.html
+++ b/ArtificialKnowledgeUtility1.html
@@ -4,7 +4,7 @@
 </head>
 <h1>Artificial Knowledge Utility</h1>
 
-<h2>This project aims to develop a web-crawling-based LLM that will present information like other LLM models but won’t require additional training. The idea is simple:</h2>
+<h2>This project aims to develop a web-crawling-based LLM that will present information of a certain website. The idea is simple:</h2>
 
     <li>Develop a custom web crawler.</li>
     <li>Create a web scraper using the web crawler.</li>
@@ -14,7 +14,7 @@
     <li>This step is relatively easy to accomplish.</li>
     <li>I will need to conduct research on this topic first. I will provide an update later.</li>
 
-<p><i>(Note: This project aims to develop a simple web-based chatbot designed for specific tasks, unlike other LLMs such as ChatGPT, Claude, etc.)</i></p>
+<p><i>(Note: This project aims to develop a simple web-based chatbot designed for a specific website.)</i></p>
 
 <p>(09/02/2024)</p>
 
