--- a/ArtificialKnowledgeUtility.html
+++ b/ArtificialKnowledgeUtility.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>AKU1</title>
+        <title>ArtificialKnowledgeUtility1</title>
     </head>
 
-    <h1>AKU</h1>
+    <h1>ArtificialKnowledgeUtility</h1>
     <a href="./ArtificialKnowledgeUtility1.html">Artificial Knowledge Utility 1</a>
 </html>
