--- a/KeyScrape/KeyScrape.html
+++ b/KeyScrape/KeyScrape.html
@@ -29,5 +29,6 @@
 <body>
     <h1>KeyScrape</h1>
     <li><h3><a href="Introduction.html">Introduction</a></h3></li>
+    <li><h3><a href="LLMtest.html">LLMtest</a></h3></li>
 </body>
 </html>
