--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-  <h1>Projects</h1>
-  <li><h2><a href="./KeyScrape/KeyScrape.html">KeyScrape</a></h2></li>
+  <h1>IC Firewall</h1>
+  <h2><a href="https://www.github.com/PrabeshMarasini/IC-Firewall">IC Firewall Github Repository</a></h2>
 </body>
 </html>
