--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prabesh Marasini</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             background-color: white;
@@ -24,10 +25,26 @@
         ul, li {
             margin-left: 20px;
         }
+        .icon {
+            font-size: 100px; /* Adjust size here */
+            color: #FF0000; /* YouTube red color */
+            animation: rotate 3s linear infinite; /* Animation for continuous rotation */
+        }
+
+        @keyframes rotate {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
+        }
     </style>
 </head>
 <body>
   <h1>IC Firewall</h1>
-  <h2><a href="https://www.github.com/PrabeshMarasini/IC-Firewall">IC Firewall Github Repository</a></h2>
+  <h2><a href="https://www.github.com/PrabeshMarasini/IC-Firewall">IC Firewall Github Repository</a></h2></br></br></br></br>
+  <i class="fab fa-youtube icon"></i></br></br>
+  <a href="https://youtube.com/@loppin6154?si=j1q8aFjcm1foBnnf">SUBSCRIBE!!</a></h2>
 </body>
 </html>
