--- a/index.html
+++ b/index.html
@@ -43,8 +43,18 @@
 </head>
 <body>
   <h1>IC Firewall</h1>
-  <h2><a href="https://www.github.com/PrabeshMarasini/IC-Firewall">IC Firewall Github Repository</a></h2></br></br></br></br>
+  <h2><a href="https://www.github.com/PrabeshMarasini/IC-Firewall">IC Firewall Github Repository</a></h2></br>
   <i class="fab fa-youtube icon"></i></br></br>
   <a href="https://youtube.com/@loppin6154?si=j1q8aFjcm1foBnnf">SUBSCRIBE!!</a></h2>
+  <h3>This project aims to develop a Firewall that can connect to multiple devices, including servers, to monitor and manage network traffic.</h3>
+  <h2><b>Stage 1: Packet Tracing and Filtering</b></h2>
+  <ul>
+    <p>In the initial stage, the focus will be on creating a packet tracing system. This will involve:</p>
+    <li><b>Tracking incoming and outgoing packets</b> on the device in real time.</li>
+    <li><b>Logging source and destination ports</b> associated with each packet, allowing for port-specific monitoring.</li>
+    <li><b>Extracting IP addresses</b> from packet headers to identify where packets are coming from and where they are going.</li>
+    <li><b>Blocking packets from suspicious IP addresses</b> that may pose security threats.</li>
+  </ul>
+  <p>Root access will be required to enable low-level network monitoring and packet filtering functionalities. Development will initially target Linux platforms.</p>
 </body>
 </html>
