--- a/index.html
+++ b/index.html
@@ -3,108 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prabesh Marasini</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Rickroll</title>
     <style>
-        /* Main content styling */
         body {
-            background-color: white;
-            color: black;
             font-family: Arial, sans-serif;
-            margin: 20px;
-            line-height: 1.6;
-            overflow: hidden; /* Hide any potential scrollbars from the blinking lights */
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
         }
-        h1 {
-            text-align: center;
-        }
-        h2 {
-            margin-top: 40px;
-        }
-        p {
-            margin: 20px 0;
-        }
-        ul, li {
-            margin-left: 20px;
-        }
-        /* Blinking lights styling */
-        .light {
-            width: 7px;
-            height: 7px;
-            border-radius: 100%;
-            position: fixed;
-            opacity: 0;
-            transition: opacity 0.5s, transform 1s;
 
-            /* Bright, intense gradient and shadows to enhance glow effect */
-            background: radial-gradient(circle, rgba(255, 255, 255, 1), transparent 70%);
-            box-shadow: 
-                0 0 30px 15px rgba(255, 255, 255, 0.8),
-                0 0 50px 30px rgba(255, 255, 255, 0.6),
-                0 0 80px 50px rgba(255, 255, 255, 0.4);
+        #content {
+            text-align: center;
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            max-width: 500px;
+        }
+
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        /* Mobile-first content */
+        #mobile-message {
+            display: block;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            text-align: center;
+            background-color: #ffcc00;
+            padding: 10px;
+            color: #000;
+            font-weight: bold;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        #content.mobile-view {
+            display: block;
+        }
+
+        #content.pc-view {
+            display: none;
+        }
+
+        /* For devices wider than 768px (PC or laptop) */
+        @media screen and (min-width: 768px) {
+            #mobile-message {
+                display: none;
+            }
+
+            #content.mobile-view {
+                display: none;
+            }
+
+            #content.pc-view {
+                display: block;
+            }
         }
     </style>
 </head>
 <body>
 
-    <!-- Main content -->
-    <h1>IC Firewall</h1>
-    <h2><a href="https://www.github.com/PrabeshMarasini/IC-Firewall">IC Firewall Github Repository</a></h2>
-    <br>
-    <h3>This project aims to develop a Firewall that can connect to multiple devices, including servers, to monitor and manage network traffic.</h3>
-    <h2><b>Stage 1: Packet Tracing and Filtering</b></h2>
-    <ul>
-        <p>In the initial stage, the focus will be on creating a packet tracing system. This will involve:</p>
-        <li><b>Tracking incoming and outgoing packets</b> on the device in real time.</li>
-        <li><b>Logging source and destination ports</b> associated with each packet, allowing for port-specific monitoring.</li>
-        <li><b>Extracting IP addresses</b> from packet headers to identify where packets are coming from and where they are going.</li>
-        <li><b>Blocking packets from suspicious IP addresses</b> that may pose security threats.</li>
-    </ul>
-    <p>Root access will be required to enable low-level network monitoring and packet filtering functionalities. Development will initially target Linux platforms.</p>
+    <div id="content" class="mobile-view">
+        <h1>Use PC to see the full content</h1>
+    </div>
 
-    <!-- Blinking lights script -->
-    <script>
-        // Define an array of brighter colors for the lights
-        const colors = ['#FFFF66', '#FF6666', '#66FF66', '#66FFFF', '#FF66FF', '#FFFF33'];
-
-        // Function to create and animate a light
-        function createLight() {
-            // Create a light element
-            const light = document.createElement('div');
-            light.classList.add('light');
-
-            // Set random color, position, and size for each light
-            const color = colors[Math.floor(Math.random() * colors.length)];
-            light.style.background = `radial-gradient(circle, ${color} 30%, transparent 70%)`;
-            light.style.boxShadow = `
-                0 0 30px 15px ${color}80,
-                0 0 50px 30px ${color}60,
-                0 0 80px 50px ${color}40
-            `;
-            light.style.left = Math.random() * 100 + 'vw';
-            light.style.top = Math.random() * 100 + 'vh';
-
-            // Add the light to the body
-            document.body.appendChild(light);
-
-            // Trigger the glow effect with a brief delay
-            setTimeout(() => {
-                light.style.opacity = 1;
-                light.style.transform = 'scale(1.5)';
-            }, 10);
-
-            // Fade out and remove the light after it glows
-            setTimeout(() => {
-                light.style.opacity = 0;
-                light.style.transform = 'scale(1)';
-                setTimeout(() => {
-                    light.remove();
-                }, 500);
-            }, 500); // The glow duration
-        }
-
-        // Create lights at a faster interval for higher density
-        setInterval(createLight, 50); // Adjust interval for more or fewer lights
-    </script>
+    <div id="content" class="pc-view">
+        <h5>!!! If you're viewing this on a PC, try visiting with a mobile device first !!!</h5>
+        <h1>I was lying 😂</h1>
+        <p>Anyways, click this button:</p>
+        <button onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ';">Click Here!</button>
+    </div>
 </body>
 </html>
