--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
 
-    <div id="content" class="mobile-view">
+<!--     <div id="content" class="mobile-view">
         <h1>Use PC to see the full content</h1>
     </div>
 
@@ -86,6 +86,6 @@
         <h1>I was lying 😂</h1>
         <p>Anyways, click this button:</p>
         <button onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ';">Click Here!</button>
-    </div>
+    </div> -->
 </body>
 </html>
