--- a/index.html
+++ b/index.html
@@ -1,91 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rickroll</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-
-        #content {
-            text-align: center;
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            margin: 20px auto;
-            max-width: 500px;
-        }
-
-        button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        /* Mobile-first content */
-        #mobile-message {
-            display: block;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            text-align: center;
-            background-color: #ffcc00;
-            padding: 10px;
-            color: #000;
-            font-weight: bold;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        #content.mobile-view {
-            display: block;
-        }
-
-        #content.pc-view {
-            display: none;
-        }
-
-        /* For devices wider than 768px (PC or laptop) */
-        @media screen and (min-width: 768px) {
-            #mobile-message {
-                display: none;
-            }
-
-            #content.mobile-view {
-                display: none;
-            }
-
-            #content.pc-view {
-                display: block;
-            }
-        }
-    </style>
-</head>
+<html>
 <body>
-
-<!--     <div id="content" class="mobile-view">
-        <h1>Use PC to see the full content</h1>
-    </div>
-
-    <div id="content" class="pc-view">
-        <h5>!!! If you're viewing this on a PC, try visiting with a mobile device first !!!</h5>
-        <h1>I was lying 😂</h1>
-        <p>Anyways, click this button:</p>
-        <button onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ';">Click Here!</button>
-    </div> -->
+<title>Empty😭</title>
 </body>
 </html>
