--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <html>
 <body>
 <title>Empty😭</title>
+
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CW4JX3SLZV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CW4JX3SLZV');
+</script>
+
+  
 </body>
 </html>
