--- a/VPN/vpnmain.html
+++ b/VPN/vpnmain.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-  <h2>Projects</h2>
-    <h3><li><a href="VPN/vpnmain.html">VPN</a></li></h3>
+  <h2>VPN</h2>
+    <h3><li><a href="vpn1.html">WireGuard Client-to-Client VPN Setup (Serverless)</a></li></h3>
 </body>
 
 </html>
