Serverless VPN article

--- a/VPN/vpnmain.html
+++ b/VPN/vpnmain.html
@@ -14,7 +14,7 @@
         gtag('config', 'G-CW4JX3SLZV');
     </script>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
