--- a/VPN/vpn1.html
+++ b/VPN/vpn1.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serverless VPN Setup</title>
     <link rel="stylesheet" href="../style.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CW4JX3SLZV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-CW4JX3SLZV');
+    </script>
 </head>
 <body>
     <h1>WireGuard Client-to-Client VPN Setup (Serverless)</h1>
