--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
   <h2>Projects</h2>
     <h3><li><a href="VPN/vpnmain.html">VPN</a></li></h3>
+    <h3><li><a href="scrapertest.html">Scraper Test</a></li></h3>
 </body>
 
 </html>
