--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <h2>Projects</h2>
     <h3><li><a href="VPN/vpnmain.html">VPN</a></li></h3>
     <h3><li><a href="scrapertest.html">Scraper Test</a></li></h3>
+    <h3><li><a href="https://www.youtube.com/@prabeshrasini2146" target="_blank">Watch Me Live!</a></li></h3>
 </body>
 
 </html>
